--- a/settings.json
+++ b/settings.json
@@ -1,1 +1,32 @@
-
+{
+  "theme": {
+    "customColorsEnabled": false,
+    "accentPrimary": "#8b5cf6",
+    "accentSecondary": "#06b6d4",
+    "rgbMode": false,
+    "rgbSpeed": 10
+  },
+  "api": {
+    "clashgg": { "endpoint": "", "apiKey": "" },
+    "acebet": { "endpoint": "", "apiKey": "" },
+    "gamba": { "endpoint": "", "apiKey": "" }
+  },
+  "leaderboard": {
+    "clashResetDays": 10,
+    "acebetResetDays": 10,
+    "gambaResetDays": 10
+  },
+  "siteConfig": {
+    "sections": {
+      "leaderboards": "active",
+      "promotions": "active",
+      "videos": "active",
+      "socials": "active"
+    },
+    "platforms": {
+      "clashgg": { "status": "active", "showDropdown": true, "showLive": true },
+      "acebet": { "status": "coming_soon", "showDropdown": true, "showLive": true },
+      "gamba": { "status": "active", "showDropdown": true, "showLive": true }
+    }
+  }
+}
