Update settings from dev panel

--- a/settings.json
+++ b/settings.json
@@ -47,6 +47,11 @@
         "status": "active",
         "showDropdown": true,
         "showLive": true
+      },
+      "testing": {
+        "status": "coming_soon",
+        "showDropdown": true,
+        "showLive": false
       }
     }
   }
