--- a/settings.json
+++ b/settings.json
@@ -36,7 +36,7 @@
       "clashgg": {
         "status": "coming_soon",
         "showDropdown": true,
-        "showLive": true
+        "showLive": false
       },
       "acebet": {
         "status": "coming_soon",
