Update settings from dev panel

--- a/settings.json
+++ b/settings.json
@@ -34,7 +34,7 @@
     },
     "platforms": {
       "clashgg": {
-        "status": "active",
+        "status": "coming_soon",
         "showDropdown": true,
         "showLive": true
       },
