Update settings from dev panel

--- a/settings.json
+++ b/settings.json
@@ -27,7 +27,7 @@
   },
   "siteConfig": {
     "sections": {
-      "leaderboards": "active",
+      "leaderboards": "coming_soon",
       "promotions": "active",
       "videos": "active",
       "socials": "active"
