--- a/settings.json
+++ b/settings.json
@@ -50,11 +50,5 @@
       }
     }
   },
-  "announcement": {
-    "type": "youtube",
-    "videoId": "onib3bDo6Z0",
-    "url": "https://www.youtube.com/watch?v=onib3bDo6Z0",
-    "autoplay": true,
-    "timestamp": 1766425643229
-  }
+  "announcement": null
 }
