Update settings from dev panel

--- a/settings.json
+++ b/settings.json
@@ -39,7 +39,7 @@
         "showLive": true
       },
       "acebet": {
-        "status": "active",
+        "status": "coming_soon",
         "showDropdown": true,
         "showLive": true
       },
